<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Question_one"
            style="@style/QuestionTextStyle"
            android:text="@string/question_1" />

        <CheckBox
            android:id="@+id/question1George"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answerGeorge"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question1Ringo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answerRingo"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question1Paul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answerPaul"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Question_two"
            style="@style/QuestionTextStyle"
            android:text="@string/question_2" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question2John"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answertwoJohn"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question2Ringo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answertwoRingo"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question2Eric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answertwoEric"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/Question_three"
            style="@style/QuestionTextStyle"
            android:text="@string/question_3" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question3John"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answerthreeJBand"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question3Skiffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answerthreeSkiffle"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question3Quarry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answerthreeQuarry"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/Question_four"
            style="@style/QuestionTextStyle"
            android:text="@string/question_4" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question4Abbey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answerAbbey"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question4Letitbe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answerLet"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question4Revolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/answerRevolver"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/Question_five"
            style="@style/QuestionTextStyle"
            android:text="@string/question_5" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <Button
            android:id="@+id/submitScore"
            style="@style/ButtonTextStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/score" />
    </LinearLayout>
</ScrollView>